# twitter-clone-ebac

server/: pyproject.toml
server/twitter/migrations/: 0003_alter_bio_text.py
server/twitter/models/: avatar.py  bio.py  tweet.py
server/twitter/models/tests/: test_bio_avatar.py
server/twitter/permissions/: __init__.py
server/twitter/serializers/: __init__.py  avatar_serializer.py  bio_serializer.py
server/twitter/services/: __init__.py  auth_services.py  avatar_services.py  bio_services.py  user_services.py
server/twitter/urls/: __init__.py  avatar_urls.py  bio_urls.py  users_urls.py
server/twitter/viewsets/: __init__.py  activate_user.py  avatar_viewset.py  bio_viewset.py  login_viewset.py  user_viewset.py
server/twitter_api/: settings.py  urls.py
